<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- activity_main strings -->
    <string name="app_name">ArriveAlert</string>
    <string name="action_settings">Settings</string>
    <string name="action_locations">Edit Locations</string>
    <string name="new_alert">New Alert</string>
    <string name="new_alert_description">Add new alert button</string>

    <string name="alerts_header">My Alerts</string>
    <string name="add_alert_button">Add New Alert</string>
    <string name="radio0">Text</string>
    <string name="radio1">Email</string>
    
    <!--  add_new_***_alert strings -->
    <string name="new_text_alert">New Text Alert</string>
    <string name="name_label">Name:</string>
    <string name="name_hint">ex: Leaving Work</string>
    <string name="name_description">(Give this alert a meaningful name)</string>
    <string name="location_label">Location:</string>
    <string name="location_hint">Use maps button</string>
    <string name="maps_button_label">Maps</string>
    <string name="contacts_button_description">Browse contacts</string>
    <string name="radio_enter_label">When I enter the location</string>
    <string name="radio_exit_label">When I exit the location</string>
    <string name="message_hint">ex: I just left work, should be home in about 30 minutes.</string>
    <string name="button_alert">Create New Alert</string>
    <string name="to_description">(Who do you want to send this alert to?)</string>
    <string name="location_description">(Where do you want this alert to trigger?)</string>
    
    <!-- add_new_email_alert strings -->
    <string name="new_email_alert">New Email Alert</string>
    <string name="email_label">Email:</string>
    <string name="email_hint">mom@gmail.com</string>
    <string name="send_email_label">Send Email:</string>
    <string name="message_email_label">Email message to send:</string>
    
    <!-- add_new_text_alert strings -->
    <string name="phone_label">Phone:</string>
    <string name="phone_hint">(123)&#8211;456&#8211;7890</string>
    <string name="send_text_label">Send Text:</string>
    <string name="message_text_label">Text message to send:</string>
    
    <!-- context_menu strings -->
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    
    <!-- edit location strings -->
    <string name="locations_header">My Locations</string>
    <string name="add_location_button">Add New Location</string>
    <string name="new_location_description">Add new location button</string>
    
    <!-- add new location strings -->
    <string name="go_button">Go</string>
    <string name="this_location_button">Add This Location</string>
    <string name="geocode_hint">123 Main Street Baltimore, MD</string>
    <string name="location_name_hint">Work</string>
    <string name="location_name_description">(Give this location a meaningful name)</string>
    
    <!-- Geofence Messages -->
    <string name="add_geofences_result_success">
        Add Geofences: Success GeofenceRequestIds=%1$s
    </string>
    <string name="add_geofences_result_failure">
        Add Geofences: Failure, error code %1$d GeofenceRequestIds=%2$s
    </string>
    <string name="add_geofences_already_requested_error">
        Can\'t add geofences, previous request hasn\'t finished.
    </string>
    <string name="connected">Client connected</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="geofence_input_error_missing">Missing value</string>
    <string name="geofence_input_error_latitude_invalid">
        Invalid latitude(s). Must be in the range -90 to 90 degrees
    </string>
    <string name="geofence_input_error_longitude_invalid">
        Invalid longitude(s). Must be in the range -180 to 180 degrees
    </string>
    <string name="geofence_input_error_radius_invalid">
        Invalid radius(s). Must be 1 meter or greater.
    </string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_error_detail">
        Geofence transition error, code %1$d message %2$s.
    </string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error. Invalid type %1$d in geofences %2$s
    </string>
    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>
    <string name="geofence_transition_notification_title">
        %1$s geofence(s) %2$s
    </string>
    <string name="geofence_transition_unknown">Unknown transition</string>
    <string name="invalid_action">Invalid action received. See error log for details.</string>
    <string name="invalid_action_detail">Invalid action %1$s received.</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="latitude_error_message">
        Latitude should be in the range -90 to 90 degrees
    </string>
    <string name="longitude_error_message">
        Longitude should be in the range -180 to 180 degrees
    </string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="play_services_available">Location Services is available</string>
    <string name="radius_error_message">Radius must be greater than or equal to 0</string>
    <string name="register_geofence">Register geofence</string>
    <string name="remove_geofences_id_failure">
        Removing geofences by request id failed: error code %1$d GeofenceRequestIds=%2$s
    </string>
    <string name="remove_geofences_already_requested_error">
        Can\'t remove geofences, previous request hasn\'t finished.
    </string>
    <string name="remove_geofences_id_success">
        Removing geofences by request ids succeeded: request ids: %1$s
    </string>
    <string name="remove_geofences_intent_failure">
        Removing all geofences failed: error code %1$d
    </string>
    <string name="remove_geofences_intent_success">
        Removing all geofences succeeded.
    </string>
    <string name="transition_entered">entered</string>
    <string name="transition_exited">exited</string>
    <string name="transition_unknown">unknown</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">
        Received an unknown activity request code %1$d in onActivityResult.
    </string>
    <string name="unregister_geofence">Remove geofences</string>
    <string name="unregister_geofence1">Remove geofence 1</string>
    <string name="unregister_geofence2">Remove geofence 2</string>

    <!-- Number patterns -->
    <string name="lat_lng_pattern">* ###.00000000;* -###.00000000</string>
    <string name="radius_pattern">* #.0000</string>

</resources>
